--- a/source/directives/login-view.html
+++ b/source/directives/login-view.html
@@ -2,9 +2,9 @@
 <div ng-controller="loginCtrl">
 		<div class="form-group">
 		<label for="username">Username:</label>
-		<input ng-model='user.username' type="text" id='username' class="form-control"></div>
+		<input ng-model='user.username' type="text" id='username' class="form-control" size="5"></div>
 		<div class="form-group">
 		<label for="password">Password:</label>
-		<input ng-model='user.password' type="password" id='password' class="form-control"></div>
-	<button ng-click='submit(user)' class="btn btn-default" id="register">Register</button>
+		<input ng-model='user.password' type="password" id='password' class="form-control" size="35"></div>
+	<button ng-click='submit(user)' class="btn btn-default" id="register">Login</button>
 </div>
