--- a/source/directives/register-view.html
+++ b/source/directives/register-view.html
@@ -15,5 +15,8 @@
 		<div class="form-group">
 		<label for="password2">Confirm Password:</label>
 		<input ng-model='user.password2' type="password" id='password2' class="form-control"></div>
+		<div class="form-group">
+		<label for="city">City:</label>
+		<input ng-model='user.city' type="city" id='city' class="form-control"></div>
 	<button ng-click='submit(user)' class="btn btn-default" id="register">Register</button>
 </div>
